--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Oct. 08, 2019   |   "
+echo "   |   Oct. 10, 2019   |   "
 
 // Launch: -freq 144 -novid -nojoy -tickrate 128 -disable_d3d9ex
 
@@ -90,8 +90,8 @@ cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_friendly_warning "0"
 cl_crosshair_t "0"
-cl_crosshairdot "1"
-cl_crosshairgap "1"
+cl_crosshairdot "0"
+cl_crosshairgap "0"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
 cl_crosshairsize "4.5"
@@ -268,7 +268,7 @@ bind "b" "+spray_menu"
 bind "c" "player_ping"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
+bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_crosshairdot 0 1 1; incrementvar cl_crosshairgap 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
@@ -277,8 +277,8 @@ bind "k" "+voicerecord"
 bind "l" "impulse 100"
 bind "m" "teammenu; say_team Mid"
 bind "n" "noclip"
-bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2.5; cl_crosshairdot 0; cl_crosshairgap -2"
-bind "p" "cl_crosshairsize 1; cl_crosshairgap -1"
+bind "o" "cl_crosshairdot 0; cl_crosshairgap -2; cl_crosshairsize 0.5; cl_crosshairthickness 2.5"
+bind "p" "cl_crosshairdot 0; cl_crosshairgap -2; cl_crosshairsize 1; cl_crosshairstyle 4"
 bind "q" "+attack2"
 bind "r" "+reload"
 bind "s" "+back"
@@ -306,14 +306,14 @@ bind "KP_MINUS" "say_team Upper"
 bind "KP_PLUS" "say_team Lower"
 bind "KP_ENTER" "buymenu"
 bind "[" "toggle cl_crosshair_sniper_width 2 1"
-bind "]" "toggle cl_crosshairgap 0 -1 1"
+bind "]" "toggle cl_crosshairgap -1 1 0"
 unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
 bind "," "toggle mat_monitorgamma 1.6 2.2 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
-bind "/" "toggle cl_hud_playercount_showcount 1 0"
-bind "\" "toggle cl_crosshairdot 0 1"
+bind "/" "toggle cl_hud_playercount_showcount 0 1"
+bind "\" "toggle cl_crosshairdot 1 0"
 bind "-" "toggle cl_crosshairsize 2 1 4.5"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
