--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Oct. 08, 2019   |   "
+echo "   |   Oct. 10, 2019   |   "
 
 // Launch: -freq 240 -novid +mat_software_aa_strength 0
 
@@ -90,8 +90,8 @@ cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "3"
 cl_crosshair_friendly_warning "0"
 cl_crosshair_t "0"
-cl_crosshairdot "1"
-cl_crosshairgap "1"
+cl_crosshairdot "0"
+cl_crosshairgap "0"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
 cl_crosshairsize "4.5"
@@ -268,7 +268,7 @@ bind "b" "+spray_menu"
 bind "c" "player_ping"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
+bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_crosshairdot 0 1 1; incrementvar cl_crosshairgap 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
 bind "g" "drop"
 bind "h" "say_team Drop"
 bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
@@ -277,8 +277,8 @@ bind "k" "+voicerecord"
 unbind "l"
 bind "m" "teammenu"
 bind "n" "noclip"
-bind "o" "cl_crosshairsize 0.5; cl_crosshairthickness 2.5; cl_crosshairdot 0; cl_crosshairgap -2"
-bind "p" "cl_crosshairsize 1; cl_crosshairgap -1"
+bind "o" "cl_crosshairdot 0; cl_crosshairgap -2; cl_crosshairsize 0.5; cl_crosshairthickness 2.5"
+bind "p" "cl_crosshairdot 0; cl_crosshairgap -2; cl_crosshairsize 1; cl_crosshairstyle 4"
 bind "q" "lastinv"
 bind "r" "+reload"
 bind "s" "+back"
@@ -324,8 +324,8 @@ bind "CAPSLOCK" "+speed"
 unbind "NUMLOCK"
 bind "ESCAPE" "cancelselect"
 bind "INS" "voice_enable 0; echo - Voice: 0%"
-bind "HOME" "voice_enable 1; voice_scale 0.1; echo - Voice: 10%"
-bind "PGUP" "voice_enable 1; voice_scale 0.5; echo - Voice: 50%"
+bind "HOME" "voice_enable 1; voice_scale 0.10; echo - Voice: 10%"
+bind "PGUP" "voice_enable 1; voice_scale 0.50; echo - Voice: 50%"
 bind "DEL" "volume 0; echo - Volume: 0%"
 bind "END" "volume 0.2; echo - Volume: 20%"
 bind "PGDN" "volume 1; echo - Volume: 100%"
