--- a/dylancsgo.cfg
+++ b/dylancsgo.cfg
@@ -1,17 +1,21 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Nov. 11, 2018   |   "
+echo "   |   Oct. 13, 2019   |   "
 
-// Launch: -freq 75 -tickrate 128
+// Launch: -freq 60 -novid -tickrate 128
 
 
 ///////////////
 // Rates     //
 ///////////////
 
-mm_dedicated_search_maxping "350.000000"
-net_client_steamdatagram_enable_override "0"    // -1 = UDP, 0 = Auto, 1 = SDR
-sdr ClientForceRelayCluster ""                  // sgp, tyo, hkg, lax, eat
+mm_dedicated_search_maxping "350"
+
+// SDR Override [-1 = UDP, 0 = Auto, 1 = SDR]
+net_client_steamdatagram_enable_override "0"
+
+// Relay Servers [sgp, tyo, hkg, lax, eat, ord]
+sdr SDRClient_ForceRelayCluster ""
 
 fps_max "300"
 fps_max_menu "120"
@@ -22,46 +26,85 @@ cl_updaterate "128"
 cl_interp "0"
 cl_interp_ratio "1"
 
+cl_lagcompensation "1"
+cl_predict "1"
+cl_predictweapons "1"
+
 
 ///////////////
-// Sound     //
+// Audio     //
 ///////////////
 
 volume "1"
-
-snd_mix_async "1"
-snd_mixahead "0.025"
+snd_musicvolume_multiplier_inoverlay "0"
+voice_caster_enable "0"
+voice_caster_scale "0"
+snd_hwcompat "0"
+voice_enable "0"
+voice_scale "0.1"
+voice_positional "1"
 snd_mute_losefocus "0"
 
-snd_deathcamera_volume "0.0"
-snd_mapobjective_volume "0.0"
-snd_menumusic_volume "0.0"
-snd_mvp_volume "0.0"
-snd_roundend_volume "0.0"
-snd_roundstart_volume "0.0"
-snd_tensecondwarning_volume "0.0"
+snd_menumusic_volume "0"
+snd_roundstart_volume "0"
+snd_roundend_volume "0"
+snd_mapobjective_volume "0"
+snd_tensecondwarning_volume "0"
+snd_deathcamera_volume "0"
+snd_mvp_volume "0"
+snd_mute_mvp_music_live_players "1"
+snd_dzmusic_volume "0"
 
+dsp_enhance_stereo "0"
+snd_mix_async "1"
+snd_mixahead "0.025"
+
+snd_hrtf_distance_behind "100"
 snd_front_headphone_position "90.000000"
 snd_rear_headphone_position "90.000000"
-snd_headphone_pan_exponent "1.0"
-snd_headphone_pan_radial_weight "1.0"
+snd_headphone_pan_exponent "1.000000"
+snd_headphone_pan_radial_weight "1.000000"
 
-voice_enable "0"
 voice_forcemicrecord "1"
 voice_modenable "1"
 voice_mixer_boost "0"
 voice_mixer_mute "0"
 voice_mixer_volume "1.0"
-voice_scale "0.3"
-voice_positional "1"
 
-dsp_enhance_stereo "0"
-snd_hwcompat "0"
 
-snd_hrtf_distance_behind "100"
+///////////////
+// Crosshair //
+///////////////
 
-cl_mute_all_but_friends_and_party "1"
-cl_mute_enemy_team "0"
+crosshair "1"
+cl_observercrosshair "1"
+cl_fixedcrosshairgap "2"
+
+cl_crosshair_sniper_width "2"
+cl_crosshair_sniper_show_normal_inaccuracy "0"
+cl_crosshair_drawoutline "0"
+cl_crosshair_outlinethickness "1"
+cl_crosshair_dynamic_maxdist_splitratio "0.25"
+cl_crosshair_dynamic_splitalpha_innermod "1"
+cl_crosshair_dynamic_splitalpha_outermod "0.5"
+cl_crosshair_dynamic_splitdist "3"
+cl_crosshair_friendly_warning "0"
+cl_crosshair_t "0"
+cl_crosshairdot "0"
+cl_crosshairgap "0"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshairstyle "5"
+cl_crosshairsize "5.5"
+cl_crosshairthickness "0.5"
+cl_crosshairalpha "200"
+cl_crosshairusealpha "1"
+cl_crosshaircolor "1"
+cl_crosshaircolor_r "250"
+cl_crosshaircolor_g "250"
+cl_crosshaircolor_b "250"
+
+cl_crosshairscale "0"
+cl_scalecrosshair "1"
 
 
 ///////////////
@@ -71,9 +114,8 @@ cl_mute_enemy_team "0"
 safezonex "1"
 safezoney "1"
 
-hud_scaling "0.95"
 hud_showtargetid "1"
-
+hud_scaling "0.95"
 cl_hud_radar_scale "1.3"
 
 cl_radar_always_centered "1"
@@ -85,46 +127,81 @@ cl_radar_square_with_scoreboard "1"
 cl_draw_only_deathnotices "0"
 cl_drawhud_force_radar "0"
 cl_drawhud_force_deathnotices "0"
-cl_showloadout "1"
-
-cl_teammate_colors_show "1"
-cl_teamid_overhead_always "1"
-
-cl_hud_bomb_under_radar "0"
-cl_hud_healthammo_style "1"
-
-cl_hud_playercount_pos "1"
-cl_hud_playercount_showcount "0"
-cl_color "3"
 
 cl_hud_color "3"
 cl_hud_background_alpha "0"
+cl_hud_bomb_under_radar "0"
+cl_hud_healthammo_style "1"
+cl_hud_playercount_pos "1"
+cl_hud_playercount_showcount "1"
+cl_showloadout "1"
 
+cl_autohelp "1"
+cl_showhelp "1"
 cl_showfps "0"
 cl_showpos "0"
 
 net_graph "0"
-net_graphheight "0"
-net_graphpos "1"
-
+net_graphheight "1000"
+net_graphpos "2"
 net_graphproportionalfont "1"
 net_graphtext "1"
 
-cpu_frequency_monitoring "0"
+
+///////////////
+// Team      //
+///////////////
+
+// Steam Group Clan Tag [0 = None, 2456601 = '∑:3']
+cl_clanid "2456601"
+
+cl_show_clan_in_death_notice "1"
+cl_teamid_overhead_mode "1"
+cl_teammate_colors_show "1"
+cl_color "3"
+
+lobby_default_privacy_bits2 "0"
+ui_setting_advertiseforhire_auto "0"
+cl_invites_only_friends "1"
+cl_invites_only_mainmenu "0"
 
 
 ///////////////
-// UI        //
+// Comms     //
 ///////////////
 
-mat_monitorgamma "1.600000"
+cl_player_ping_mute "0"
+cl_mute_enemy_team "0"
+cl_mute_all_but_friends_and_party "1"
+cl_hide_avatar_images "2"
+cl_sanitize_player_names "0"
+
+
+///////////////
+// UI/UX     //
+///////////////
+
+mat_monitorgamma "2.2"
+
+cl_autowepswitch "0"
+cl_righthand "1"
+
+closeonbuy "1"
+cl_use_opens_buy_menu "0"
+cl_playerspray_auto_apply "1"
+
+cl_scoreboard_mouse_enable_binding "+attack2"
+cl_scoreboard_survivors_always_on "1"
+
+option_duck_method "0"
+option_speed_method "0"
 
 viewmodel_fov "60"
 viewmodel_offset_x "1"
 viewmodel_offset_y "1"
-viewmodel_offset_z "-1.5"
+viewmodel_offset_z "-1"
 viewmodel_presetpos "1"
-viewmodel_recoil "1"
+viewmodel_recoil "1.0"
 
 cl_viewmodel_shift_left_amt "1.5"
 cl_viewmodel_shift_right_amt "0.75"
@@ -134,75 +211,21 @@ cl_bobcycle "0.98"
 cl_bobamt_lat "0.1"
 cl_bobamt_vert "0.1"
 
-option_duck_method "0"
-option_speed_method "0"
-
 r_drawtracers_firstperson "1"
-
-cl_autowepswitch "0"
-cl_righthand "1"
-
-closeonbuy "1"
-cl_use_opens_buy_menu "0"
-
-cl_scoreboard_mouse_enable_binding "radio1"
-
-ui_steam_overlay_notification_position "topright"
-gameinstructor_enable "0"
-
-cl_autohelp "1"
-cl_showhelp "0"
-
-spec_replay_autostart "0"
-
-mapoverview_allow_client_draw "0"
-mapoverview_allow_grid_usage "0"
-
-cl_playerspray_auto_apply "1"
-
-
-///////////////
-// Crosshair //
-///////////////
-
-crosshair "1"
-cl_observercrosshair "1"
-cl_fixedcrosshairgap "3"
-
-cl_crosshair_sniper_width "1"
-cl_crosshair_sniper_show_normal_inaccuracy "0"
-cl_crosshair_drawoutline "0"
-cl_crosshair_outlinethickness "1"
-cl_crosshair_dynamic_maxdist_splitratio "0.25"
-cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.5"
-cl_crosshair_dynamic_splitdist "3"
-cl_crosshair_t "0"
-cl_crosshairdot "1"
-cl_crosshairgap "1"
-cl_crosshairgap_useweaponvalue "0"
-cl_crosshairstyle "5"
-cl_crosshairsize "4.5"
-cl_crosshairscale "0"
-cl_crosshairthickness "0.5"
-cl_crosshairalpha "200"
-cl_crosshairusealpha "1"
-cl_crosshaircolor "1"
-cl_crosshaircolor_r "50"
-cl_crosshaircolor_g "250"
-cl_crosshaircolor_b "50"
 
 
 ///////////////
 // Mouse     //
 ///////////////
 
-sensitivity "2.664"
+sensitivity "1.34"
 zoom_sensitivity_ratio_mouse "1.0"
+zoom_sensitivity_ratio_joystick "1.0"
 
 cl_mouselook "1"
 joystick "0"
 joystick_force_disabled "1"
+joystick_force_disabled_set_from_options "1"
 
 m_customaccel "0"
 m_customaccel_exponent "1.05"
@@ -227,8 +250,8 @@ lookstrafe "0"
 
 unbindall
 
-alias "+jumpthrow" "-attack; +jump"
-alias "-jumpthrow" "-jump"
+//alias "+robocop" "cl_crosshairsize 450"
+//alias "-robocop" "cl_crosshairsize 5.5"
 
 bind "0" "slot10"
 bind "1" "slot1"
@@ -242,13 +265,13 @@ bind "8" "slot4"
 bind "9" "slot9"
 bind "a" "+moveleft"
 bind "b" "+spray_menu"
-bind "c" "radio3"
+bind "c" "player_ping"
 bind "d" "+moveright"
 bind "e" "slot3"
-bind "f" "toggle cl_radar_always_centered 0 1; toggle cl_radar_scale 0.3 0.7; toggle cl_righthand 1 0; toggle cl_teamid_overhead_always 2 1"
+bind "f" "incrementvar cl_radar_always_centered 0 1 1; incrementvar cl_radar_scale 0.3 0.7 0.4; incrementvar cl_righthand 0 1 1; incrementvar cl_crosshairdot 0 1 1; incrementvar cl_crosshairgap 0 1 1; incrementvar cl_teamid_overhead_mode 1 2 1"
 bind "g" "drop"
 unbind "h"
-unbind "i"
+bind "i" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
 bind "j" "impulse 200"
 bind "k" "+voicerecord"
 bind "l" "impulse 100"
@@ -263,9 +286,9 @@ bind "t" "+use"
 bind "u" "messagemode2"
 bind "v" "r_cleardecals; +lookatweapon"
 bind "w" "+forward"
-bind "x" "radio2"
+bind "x" "slot12; radio3"
 bind "y" "messagemode"
-bind "z" "radio1"
+bind "z" "radio"
 bind "KP_INS" "buy vest"
 bind "KP_DEL" "buy vesthelm"
 bind "KP_END" "buy hegrenade"
@@ -274,7 +297,7 @@ bind "KP_PGDN" "buy smokegrenade"
 bind "KP_LEFTARROW" "buy molotov; buy incgrenade"
 bind "KP_5" "buy decoy"
 bind "KP_RIGHTARROW" "buy defuser"
-bind "KP_HOME" "buy taser 34"
+bind "KP_HOME" "buy taser"
 bind "KP_UPARROW" "autobuy"
 bind "KP_PGUP" "rebuy"
 unbind "KP_SLASH"
@@ -288,11 +311,11 @@ unbind "SEMICOLON"
 unbind "'"
 bind "`" "toggleconsole"
 unbind ","
-unbind "."
+bind "." "toggle hud_scaling 0.5 0.95"
 unbind "/"
-unbind "\"
+bind "\" "toggle cl_crosshairdot 0 1"
 unbind "-"
-unbind "="
+bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
 bind "SPACE" "+jump"
 bind "BACKSPACE" "toggle cl_showpos 1 0"
@@ -306,16 +329,16 @@ unbind "PGUP"
 unbind "DEL"
 unbind "END"
 bind "PGDN" "volume 1; echo - Volume: 100%"
-bind "PAUSE" "pause"
+unbind "PAUSE"
 bind "SHIFT" "+duck"
 unbind "RSHIFT"
-bind "ALT" "+jumpthrow"
+bind "ALT" "+jump; -attack; -attack2; -jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
 unbind "RCTRL"
-bind "LWIN" "say Windows key pressed."
-bind "RWIN" "say Windows key pressed."
-bind "APP" "say App key pressed."
+unbind "LWIN"
+unbind "RWIN"
+unbind "APP"
 unbind "UPARROW"
 unbind "LEFTARROW"
 unbind "DOWNARROW"
@@ -349,40 +372,40 @@ developer "0"
 
 con_enable "1"
 con_timestamp "0"
-
 con_filter_enable "2"
 con_filter_text "Damage"
 con_filter_text_out "Player:"
 
-cl_downloadfilter "all"
-
 cl_allowdownload "1"
 cl_allowupload "1"
+cl_downloadfilter "all"
+cl_showpluginmessages2 "0"
 
-cl_disablefreezecam "1"
 cl_disablehtmlmotd "1"
+cl_disablefreezecam "1"
+cl_freezecameffects_showholiday "0"
 
 cl_forcepreload "0"
 
-cl_freezecameffects_showholiday "0"
-
-cl_obs_interp_enable "1"
-cl_showpluginmessages2 "0"
-
 mat_queue_mode "2"
 engine_no_focus_sleep "0"
+cpu_frequency_monitoring "0"
 
-lobby_default_privacy_bits1 "0"
+spec_replay_autostart "0"
+spec_usenumberkeys_nobinds "1"
+cl_spec_follow_grenade_key "0"
+cl_obs_interp_enable "0"
+//cl_obs_interp_pos_rate "0.27"
 
-cl_clanid "2456601"
-//cl_clanid "8291083"
-//cl_clanid ""
+gameinstructor_enable "0"
+ui_steam_overlay_notification_position "topright"
 
 
 ///////////////
 // End       //
 ///////////////
 
+play "buttons\weapon_confirm.wav"
 
 echo "   | DylanCSGO LOADED! |   "
 echo "   ---------------------   "
