--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Nov. 08, 2019   |   "
+echo "   |   Nov. 17, 2019   |   "
 
 // Launch: -freq 144 -novid -nojoy -tickrate 128 -disable_d3d9ex
 
@@ -18,7 +18,7 @@ net_client_steamdatagram_enable_override "-1"
 sdr SDRClient_ForceRelayCluster ""
 
 fps_max "500"
-fps_max_menu "150"
+fps_max_menu "500"
 
 rate "262144"
 cl_cmdrate "128"
@@ -223,7 +223,7 @@ zoom_sensitivity_ratio_mouse "1.0"
 zoom_sensitivity_ratio_joystick "1.0"
 
 cl_mouselook "1"
-//joystick "0"
+joystick "0"
 joystick_force_disabled "1"
 joystick_force_disabled_set_from_options "1"
 
@@ -405,7 +405,6 @@ ui_steam_overlay_notification_position "topright"
 // End       //
 ///////////////
 
-host_writeconfig
 play "buttons\weapon_confirm.wav"
 
 echo "   |  CSGOLOW LOADED!  |   "
