--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Dec. 14, 2019   |   "
+echo "   |   Jan. 11, 2020   |   "
 
-// Launch: -freq 144 -novid -nojoy -tickrate 128 -disable_d3d9ex
+// Launch: -freq 144 -novid -nojoy -tickrate 128 -disable_d3d9ex +cl_forcepreload 0 +sv_forcepreload 0
 
 
 ///////////////
@@ -75,7 +75,7 @@ voice_mixer_volume "1.0"
 
 crosshair "1"
 cl_observercrosshair "1"
-cl_fixedcrosshairgap "2"
+cl_fixedcrosshairgap "-3"
 
 cl_crosshair_sniper_width "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
