--- a/bhopserver.cfg
+++ b/bhopserver.cfg
@@ -1,20 +1,30 @@
 echo
 echo "   ---------------------   "
-echo "   |   Aug. 24, 2019   |   "
+echo "   |   Jan. 26, 2020   |   "
 
 bot_kick
+
 mp_drop_knife_enable 1
+
 mp_solid_teammates 0
 mp_ignore_round_win_conditions 1
+
 sv_enablebunnyhopping 1
 sv_autobunnyhopping 1
+sv_clamp_unsafe_velocities 0
+
+sv_friction 4
+sv_accelerate 5.5
 sv_airaccelerate 100
-sv_staminajumpcost 0.080
-sv_staminalandcost 0.050
+
+sv_staminamax 0
+sv_staminajumpcost 0
+sv_staminalandcost 0
+sv_min_jump_landing_sound 600
+
 sv_falldamage_scale 0
 sv_ladder_scale_speed 1
-sv_clamp_unsafe_velocities 0
-sv_friction 4
+sv_timebetweenducks 0
 
 echo "   | BHOPSERVER LOADED |   "
 echo "   ---------------------   "
