--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Feb. 26, 2020   |   "
+echo "   |   Feb. 27, 2020   |   "
 
-// Launch: -freq 240 -novid +mat_software_aa_strength 0
+// Launch: -fullscreen -freq 240 -novid +mat_software_aa_strength 0
 
 
 ///////////////
@@ -91,7 +91,7 @@ cl_crosshairdot "0"
 cl_crosshairgap "0"
 cl_crosshairgap_useweaponvalue "0"
 cl_crosshairstyle "5"
-cl_crosshairsize "4.5"
+cl_crosshairsize "4"
 cl_crosshairthickness "0.5"
 cl_crosshairalpha "200"
 cl_crosshairusealpha "1"
@@ -179,11 +179,15 @@ mat_monitorgamma "2.0"
 
 cl_autowepswitch "0"
 cl_righthand "1"
+cl_playerspray_auto_apply "1"
+cl_sniper_delay_unscope "0"
 
 closeonbuy "1"
 cl_use_opens_buy_menu "0"
-cl_playerspray_auto_apply "1"
-cl_sniper_delay_unscope "0"
+cl_buywheel_nomousecentering "0"
+cl_buywheel_nonumberpurchasing "0"
+cl_autobuy "vest ak47 m4a1 galilar famas ssg08 flashbang defuser"
+cl_rebuy "Armor PrimaryWeapon Flashbang SmokeGrenade Flashbang HEGrenade Molotov IncGrenade Defuser SecondaryWeapon Taser Decoy"
 
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "1"
@@ -246,7 +250,7 @@ lookstrafe "0"
 unbindall
 
 alias "+robocop" "cl_crosshairsize 450"
-alias "-robocop" "cl_crosshairsize 4.5"
+alias "-robocop" "cl_crosshairsize 4"
 
 bind "0" "slot10"
 bind "1" "slot1"
@@ -309,7 +313,7 @@ bind "," "toggle mat_monitorgamma 1.6 2.2 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
-bind "-" "toggle cl_crosshairsize 2 1 4.5"
+bind "-" "toggle cl_crosshairsize 2 1 4"
 bind "=" "toggle cl_crosshairstyle 2 0 1 5; toggle cl_crosshaircolor 0 3 5 1"
 unbind "ENTER"
 bind "SPACE" "+jump"
@@ -390,7 +394,6 @@ spec_replay_autostart "0"
 spec_usenumberkeys_nobinds "1"
 cl_spec_follow_grenade_key "0"
 cl_obs_interp_enable "1"
-//cl_obs_interp_pos_rate "0.27"
 
 gameinstructor_enable "0"
 ui_steam_overlay_notification_position "topright"
