--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Mar. 22, 2020   |   "
+echo "   |   Mar. 25, 2020   |   "
 
 // Launch: -nojoy -novid -disable_d3d9ex
 
@@ -175,7 +175,7 @@ cl_sanitize_player_names "0"
 // UI/UX     //
 ///////////////
 
-mat_monitorgamma "2.2"
+mat_monitorgamma "1.6"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 
@@ -213,7 +213,7 @@ cl_bobamt_lat "0.1"
 cl_bobamt_vert "0.1"
 
 r_drawtracers_firstperson "1"
-r_dynamic "0"
+r_dynamic "1"
 
 
 ///////////////
@@ -337,7 +337,7 @@ unbind "RSHIFT"
 bind "ALT" "+jump; -attack; -attack2; -jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
-bind "RCTRL" "toggle safezonex 1.0 0.85"
+bind "RCTRL" "toggle safezonex 1.0 0.92; toggle safezoney 1.0 0.92"
 unbind "LWIN"
 unbind "RWIN"
 unbind "APP"
