--- a/napkincsgolow.cfg
+++ b/napkincsgolow.cfg
@@ -1,6 +1,6 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Mar. 22, 2020   |   "
+echo "   |   Mar. 26, 2020   |   "
 
 // Launch: -nojoy -novid -fullscreen +mat_software_aa_strength 0
 
@@ -105,8 +105,8 @@ cl_crosshaircolor_b "250"
 // HUD       //
 ///////////////
 
-safezonex "1.0"
-safezoney "1.0"
+safezonex "0.88"
+safezoney "0.88"
 
 hud_showtargetid "1"
 hud_scaling "0.95"
@@ -123,7 +123,7 @@ cl_drawhud_force_radar "0"
 cl_drawhud_force_deathnotices "0"
 
 cl_hud_color "10"
-cl_hud_background_alpha "0.25"
+cl_hud_background_alpha "0"
 cl_hud_bomb_under_radar "0"
 cl_hud_healthammo_style "1"
 cl_hud_playercount_pos "1"
@@ -175,7 +175,7 @@ cl_sanitize_player_names "0"
 // UI/UX     //
 ///////////////
 
-mat_monitorgamma "2.0"
+mat_monitorgamma "1.88"
 mat_monitorgamma_tv_enabled "0"
 mat_powersavingsmode "0"
 
@@ -312,7 +312,7 @@ bind "]" "toggle cl_crosshairgap 0 -1 -2 2 1"
 unbind "SEMICOLON"
 bind "'" "cl_crosshaircolor 5; toggle cl_crosshaircolor_g 0 100 40 250; toggle cl_crosshaircolor_b 0 60 120 250"
 bind "`" "toggleconsole"
-bind "," "toggle mat_monitorgamma 1.6 2.2 2.6"
+bind "," "toggle mat_monitorgamma 1.88 2.22 2.6"
 bind "." "toggle hud_scaling 0.5 0.95"
 bind "/" "toggle cl_hud_playercount_showcount 1 0"
 bind "\" "toggle cl_crosshairdot 0 1"
@@ -337,7 +337,7 @@ unbind "RSHIFT"
 bind "ALT" "+jump; -attack; -attack2; -jump"
 bind "RALT" "+strafe"
 bind "CTRL" "+duck"
-bind "RCTRL" "toggle safezonex 1.0 0.85"
+bind "RCTRL" "toggle safezonex 1.0 0.88; toggle safezoney 1.0 0.88"
 unbind "LWIN"
 unbind "RWIN"
 unbind "APP"
@@ -361,7 +361,7 @@ bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE3" "+lookatweapon"
 bind "MOUSE4" "lastinv"
-bind "MOUSE5" "toggle mat_monitorgamma 1.6 2.6"
+bind "MOUSE5" "toggle mat_monitorgamma 1.88 2.22"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
