--- a/csgolow.cfg
+++ b/csgolow.cfg
@@ -1,8 +1,8 @@
 echo "                           "
 echo "   ---------------------   "
-echo "   |   Apr. 30, 2020   |   "
+echo "   |   May. 05, 2020   |   "
 
-// Launch: -novid -disable_d3d9ex
+// Launch: -novid -console -disable_d3d9ex
 
 
 ///////////////
@@ -391,7 +391,7 @@ func_break_max_pieces "0"
 
 cl_forcepreload "0"
 
-mat_queue_mode "-1"
+mat_queue_mode "2"
 engine_no_focus_sleep "0"
 cpu_frequency_monitoring "0"
 
